# hexwave

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
include/ImGuiNotify/: IconsFontAwesome6.h
include/engine/: project_settings.h  video.h  video_manager.h  window.h
include/engine/utilities/: file_management.h  input_manager.h  json_utilities.h
libs/FFmpeg/: CMakeLists.txt
libs/FFmpeg/include/libavutil/: ffversion.h
libs/FFmpeg/lib/: libavdevice.so.60.4.100  libavfilter.so.9  libavformat.so.60.23.100  libavutil.so.58  libavutil.so.58.40.100  libpostproc.so.57  libpostproc.so.57.4.100  libswresample.so.4.14.100  libswscale.so.7.6.100
libs/ffmpeg/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
libs/glad/src/: gl.c
shaders/: generic.shader
src/engine/: main.cpp  project_settings.cpp  video.cpp  video_manager.cpp  window.cpp
src/engine/utilities/: file_management.cpp  input_manager.cpp
